<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.savch.capsule.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text=""
        android:hint="@string/input_amount"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/addEditText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/input_delAmount"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:id="@+id/delEditText"
        android:layout_below="@+id/addEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countButton"
        android:onClick="onButtonClick"
        android:layout_above="@+id/delEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/MyButton"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <Button
        android:text="@string/null_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nullButton"
        android:onClick="onButtonClick"
        android:layout_alignBottom="@+id/delEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/MyButton"
        android:layout_alignLeft="@+id/countButton"
        android:layout_alignStart="@+id/countButton"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/amount_view"
        android:textSize="30sp"
        android:layout_below="@+id/delEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp" />

    <TextView
        android:text="@string/balanse_text"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:textSize="25sp"
        android:layout_below="@+id/delEditText"
        android:layout_alignLeft="@+id/amount_view"
        android:layout_alignStart="@+id/amount_view"
        android:layout_marginTop="23dp"
        android:id="@+id/textViewBalanse" />


</RelativeLayout>
